# rust

./: .PSScriptAnalyzerSettings.psd1  .build-targets.yml  .editorconfig  .gitattributes  .gitignore  .jscpd.json  .lintstagedrc.yml  .mise.toml  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  USAGE.md  clippy.toml  deny.toml  eslint.config.mjs  mise.toml  package-lock.json  package.json  pyproject.toml  rustfmt.toml
.cargo-husky/hooks/: pre-commit
.coverage/: lcov.info  tarpaulin-report.html
.github/: dependabot.yml
.github/actions/parse-target/: action.yml
.github/actions/setup-tools/: action.yml
.github/workflows/: auto.retry.yml  ci.build.yml  ci.cleanup.yml  ci.quality.yml  ci.release.yml  ci.version.yml  ci.yml
.husky/: pre-commit  pre-push
.scripts/: build-dist.ps1  build-dist.sh  pwshlint.py  shlint.py
.scripts/pylib/: file_finder.py  linter.py
.uvx-install/: __init__.py  bootstrap.py
_uvx_install/: bootstrap.py
src/: greeter.rs  lib.rs  main.rs
tests/: greeter_tests.rs
