[package]
name = "rust-template"
version = "1.0.0"
authors = ["Templ Project"]
edition = "2021"
rust-version = "1.75.0"
description = "A Rust Bootstrap/Template project using modern tools and best practices"
readme = "README.md"
homepage = "https://github.com/templ-project/rust"
repository = "https://github.com/templ-project/rust"
license = "MIT"
keywords = ["template", "bootstrap", "rust", "cargo"]
categories = ["development-tools"]

# Binary target (for CLI)
[[bin]]
name = "rust-template"
path = "src/main.rs"

# Library target (for lib usage)
[lib]
name = "rust_template"
path = "src/lib.rs"

[dependencies]
# Add runtime dependencies here
# For example:
# thiserror = "1.0"
# anyhow = "1.0"

[dev-dependencies]
# Test utilities
# For property-based testing: proptest = "1.0"

# Git hooks
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
debug = true
