[project]
name = "rust-template-bootstrap"
version = "1.0.0"
description = "Bootstrap script for Rust template project"
authors = [{ name = "Templ Project" }]
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
bootstrap = ".uvx-install.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".uvx-install"]

[tool.hatch.build.targets.wheel.force-include]
".uvx-install" = ".uvx-install"
