[project]
name = "generic-template-bootstrap"
version = "1.0.0"
description = "Bootstrap script for generic template project"
authors = [{ name = "Templ Project" }]
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
bootstrap = "_uvx_install.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["_uvx_install"]

[dependency-groups]
dev = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "pylint>=3.0.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
]

# =============================================================================
# Pylint Configuration (PEP 8 compliant)
# =============================================================================
[tool.pylint.main]
# Ignore directories
ignore = ["node_modules", ".venv", "dist", "build", "docs-html", "coverage", ".jscpd", "_uvx_install"]

# Ignore patterns (regex) similar to eslint/prettier
ignore-patterns = [
  "^\\.", # Hidden files/dirs
]

# Use multiple processes for speed
jobs = 0

# Minimum Python version (stack.md: Python 3.11+)
py-version = "3.11"

# Source layout (stack.md: src/ layout)
source-roots = ["src", ".scripts"]

[tool.pylint.format]
# PEP 8: 79 chars for code, 72 for docstrings (we use 88 to match Black)
max-line-length = 88

# Expected indentation (PEP 8: 4 spaces)
indent-string = "    "

[tool.pylint.basic]
# PEP 8 naming conventions
good-names = ["i", "j", "k", "x", "y", "z", "f", "fd", "id", "ip", "ok", "_"]

# snake_case for functions and variables
function-rgx = "[a-z_][a-z0-9_]{2,50}$"
variable-rgx = "[a-z_][a-z0-9_]{0,50}$"
argument-rgx = "[a-z_][a-z0-9_]{0,50}$"
attr-rgx = "[a-z_][a-z0-9_]{0,50}$"
method-rgx = "[a-z_][a-z0-9_]{2,50}$"

# PascalCase for classes
class-rgx = "[A-Z_][a-zA-Z0-9]+$"

# UPPER_CASE for constants
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"

# Module names: short, lowercase, underscores allowed
module-rgx = "[a-z_][a-z0-9_]*$"

[tool.pylint.messages_control]
# Enable strict checks aligned with PEP 8
enable = ["useless-suppression"]
# Disable rules that conflict with Black/Ruff or are too noisy
disable = [
  "line-too-long", # Black handles this
  "too-few-public-methods", # Often false positive
  "fixme", # Allow TODO comments
  "import-error", # Dynamic sys.path in .scripts/ causes false positives
]

[tool.pylint.design]
# Maximum number of arguments for functions
max-args = 7

# Maximum number of local variables
max-locals = 15

# Maximum number of return statements
max-returns = 6

# Maximum number of branches
max-branches = 12

# Maximum number of statements
max-statements = 50

[tool.pylint.similarities]
# Ignore imports when computing similarities
ignore-imports = true

# Minimum lines for duplication detection
min-similarity-lines = 6

[tool.pylint.typecheck]
# For type hints (stack.md: type hints; mypy recommended)
generated-members = []

# =============================================================================
# Black Configuration (stack.md: Black formatter)
# =============================================================================
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  node_modules
  | .venv
  | dist
  | build
  | docs-html
  | coverage
  | .jscpd
  | _uvx_install
)/
'''

# =============================================================================
# Ruff Configuration (stack.md: Ruff/flake8)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88

exclude = ["node_modules", ".venv", "dist", "build", "docs-html", "coverage", ".jscpd", "_uvx_install"]

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), isort (I), and more
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "SIM", # flake8-simplify
]

ignore = [
  "E501", # line too long (Black handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["_uvx_install"]

# =============================================================================
# Mypy Configuration (stack.md: type hints; mypy recommended)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Gradual typing
check_untyped_defs = true
ignore_missing_imports = true

exclude = ["node_modules", ".venv", "dist", "build", "docs-html", "coverage", ".jscpd", "_uvx_install"]

# =============================================================================
# Pytest Configuration (stack.md: pytest with fixtures)
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", ".scripts"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
